fix lcd logical bug

--- a/Uno-Firmware/platformio.ini
+++ b/Uno-Firmware/platformio.ini
@@ -16,4 +16,4 @@ framework = arduino
 lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
-  marcoschwartz/LiquidCrystal_I2C @ ^1.1.4  ;  by Frank de Brabander
+  arduino-libraries/LiquidCrystal @ ^1.0.7 ; by Arduino
